hphp/hack/test/typecheck/coalesce_null_switch.php.like_types.exp
File "coalesce_null_switch.php", line 9, characters 10-19:
Invalid return type (Typing[4336])
File "coalesce_null_switch.php", line 9, characters 10-19:
Expected void because this function does not always return a value
File "coalesce_null_switch.php", line 9, characters 29-31:
But got int
